test/visibility/private/uses/accessSecondary.good
accessSecondary.chpl:7: error: unresolved call 'Foo.other()'
accessSecondary.chpl:7: note: because no functions named other found in scope
